--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Investment Gaps Analysis - Executive Edition</title>
+    <title>AI Investment Gap Analysis - Executive Edition</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -13,7 +13,7 @@
         <header class="executive-header">
             <div class="header-content">
                 <div class="header-left">
-                    <h1 class="dashboard-title">AI Investment Gaps Analysis</h1>
+                    <h1 class="dashboard-title">AI Investment Gap Analysis</h1>
                     <p class="header-subtitle">Executive Intelligence & Strategic Action Plan</p>
                     <div class="header-timestamp">Last updated: September 18, 2025 | $340B Total Gap Identified</div>
                 </div>
